sanger/sites/cell2location/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cell2location-mouse-brain
  labels:
    app: cell2location-mouse-brain
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cell2location-mouse-brain
---
apiVersion: v1
kind: Service
metadata:
  name: cell2location-mouse-brain-astrocytes
  labels:
    app: cell2location-mouse-brain-astrocytes
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cell2location-mouse-brain-astrocytes
---
