sanger/sites/cell2location/ingress.yaml

apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: cell2location-cellgeni
spec:
  virtualhost:
    fqdn: cell2location.cellgeni.sanger.ac.uk
  routes:
    - match: /mouse-brain
      prefixRewrite: "/" 
      services:
        - name: cell2location-mouse-brain
          port: 80
    - match: /static
      services:
        - name: cell2location-mouse-brain
          port: 80
    - match: /mouse-brain-astrocytes
      prefixRewrite: "/" 
      services:
        - name: cell2location-mouse-brain-astrocytes
          port: 80
---
